05-Module 3/8.gateway-api/2.migration/1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
    env: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        env: dev
    spec:
      containers:
        - name: frontend
          image: ghcr.io/marcelloraffaele/hello:main
          ports:
            - containerPort: 8080
