05-Module 3/8.gateway-api/2.migration/4.gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.5.0
  name: hello-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: example-local-http
    port: 80
    protocol: HTTP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.5.0
  name: frontend-ingress-example-local
spec:
  hostnames:
  - example.local
  parentRefs:
  - name: hello-gateway
  rules:
  - backendRefs:
    - name: frontend-service
      port: 8080
    matches:
    - path:
        type: PathPrefix
        value: /
